# mcp-security-gateway-monitor

./: .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOVELTY.md  README.md  RESEARCH_REPORT.md  SECURITY.md  docker-compose.yml  locustfile.py  pyproject.toml  run_dashboard.py  sbom.json  test_gateway.py  test_navigator.py
.agents/tasks/task-security-review/: SECURITY_REVIEW.md  context.json  task.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  security.yml
attack_mapping/: enricher.py
benchmarks/: README.md  __init__.py  benchmark.py
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  poddisruptionbudget.yaml  pvc.yaml  secret.example.yaml  secret.yaml  service.yaml
docs/: ENGINEERING.md
scripts/: pip_audit_gate.py
security/: audit-allowlist.txt  dependency-audit.txt
src/mcp_monitor/: __init__.py  cli.py  monitor.py
src/mcp_monitor/advanced/: __init__.py  canary.py  correlation.py  drift.py  invariants.py  manifest.py
src/mcp_monitor/audit/: __init__.py  log.py  wal.py
src/mcp_monitor/dashboard/: __init__.py  report.py  terminal.py
src/mcp_monitor/defense10/: README.md  __init__.py  dataset.py  egress_proxy.py  features.py  honeypot.py  ml_classifier.py  ml_eval.py  network_monitor.py  orchestrator10.py  rate_limiter.py  sandbox.py
src/mcp_monitor/detectors/: __init__.py  exfiltration.py  pii_detector.py  prompt_injection.py  shadow_server.py
src/mcp_monitor/layers/: __init__.py  egress.py  kernel.py  orchestrator.py  proxy.py  semantic.py
src/mcp_monitor/production/: __init__.py  alerting.py  circuit_breaker.py  config.py  logging.py  metrics.py  rate_limiter.py  server.py  shutdown.py  tracing.py
src/mcp_monitor/redteam/: __init__.py  payloads.py  simulator.py
tests/: test_5_layers.py  test_advanced_canary.py  test_advanced_correlation.py  test_advanced_drift.py  test_advanced_invariants.py  test_advanced_manifest.py  test_attack_mapping.py  test_audit_log.py  test_bcc_normalization.py  test_benchmark.py  test_coverage_100.py  test_cross_platform.py  test_defense10.py  test_deployment.py  test_exfiltration.py  test_fuzz.py  test_normalization_pipeline.py  test_pii_detector.py  test_production.py  test_prompt_injection.py  test_shadow_server.py
(+1 files in other folders)
