[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-gateway-monitor"
version = "0.1.0"
description = "Security monitor for MCP tool calls with detector orchestration and immutable audit logging."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pyyaml>=6.0",
]
# The core detectors + 5 layers are pure stdlib (zero deps).
# The defense10 ML classifier needs scikit-learn; install with [ml].
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
]
# DPI egress proxy for live TLS inspection (optional, production).
dpi = [
    "mitmproxy>=9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

